# lyr

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.cargo/: config
.github/workflows/: ci.yml
src/: config.rs  error.rs  fetcher.rs  main.rs  utils.rs
src/fetchers/: azlyrics.rs  genius.rs  jahlyrics.rs  mod.rs  musixmatch.rs
