[package]
name = "lyr"
version = "0.2.0"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool to download and embed lyrics from multiple sources "
repository = "https://github.com/Serial-ATA/lyr"
keywords = ["lyrics", "tags", "audio", "metadata"]
categories = ["multimedia::audio", "command-line-utilities"]
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.0.15", features = ["derive"] }
env_logger = { version = "0.11.4", features = ["color"] }
lofty = "0.20.1"
log = "0.4.17"
once_cell = "1.15.0"
regex = "1.6.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
toml = "0.8.15"
dirs = "5.0.1"