[package]
name = "lyr"
version = "0.3.0"
authors = ["Serial <69764315+Serial-ATA@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool to download and embed lyrics from multiple sources"
repository = "https://github.com/Serial-ATA/lyr"
keywords = ["lyrics", "tags", "audio", "metadata"]
categories = ["multimedia::audio", "command-line-utilities"]
readme = "README.md"
include = ["src", "Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
aho-corasick = "1.1.3"
clap = { version = "4.0.15", features = ["derive"] }
env_logger = { version = "0.11.4", features = ["color"] }
lofty = "0.20.1"
log = "0.4.17"
once_cell = "1.15.0"
regex = "1.6.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
toml = "0.8.15"
dirs = "5.0.1"

[lints.rust]
rust_2018_idioms               = { level = "deny", priority = -1 }
trivial_casts                  = "deny"
trivial_numeric_casts          = "deny"
unused_import_braces           = "deny"
explicit_outlives_requirements = "deny"
unknown_lints                  = "allow"

[lints.clippy]
pedantic                           = { level = "deny", priority = -1 }
all                                = { level = "deny", priority = -1 }
too_many_lines                     = "allow"
cast_precision_loss                = "allow"
cast_sign_loss                     = "allow"
cast_possible_wrap                 = "allow"
cast_possible_truncation           = "allow"
module_name_repetitions            = "allow"
must_use_candidate                 = "allow"
doc_markdown                       = "allow"
match_wildcard_for_single_variants = "allow"
semicolon_if_nothing_returned      = "allow"
from_over_into                     = "allow"
upper_case_acronyms                = "allow"
single_match_else                  = "allow"
similar_names                      = "allow"
tabs_in_doc_comments               = "allow"
len_without_is_empty               = "allow"
needless_late_init                 = "allow"
type_complexity                    = "allow"
return_self_not_must_use           = "allow"
bool_to_int_with_if                = "allow"
uninlined_format_args              = "allow" # This should be changed for any normal "{}", but I'm not a fan of it for any debug or width specific formatting
let_underscore_untyped			   = "allow"
field_reassign_with_default 	   = "allow"
manual_range_patterns 			   = "allow" # This is not at all clearer as it suggests
no_effect_underscore_binding 	   = "allow"
used_underscore_binding 		   = "allow"
ignored_unit_patterns 			   = "allow" # Not a fan of this lint, doesn't make anything clearer as it claims
needless_return 				   = "allow" # Explicit returns are needed from time to time for clarity
redundant_guards 				   = "allow" # Currently broken for some cases, might enable later
into_iter_without_iter 		       = "allow" # This is only going to fire on some internal types, doesn't matter much
struct_excessive_bools 		       = "allow" # I have yet to find one case of this being useful